# Learn_CMake

./: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake
calc/: CMakeLists.txt  div.cpp
include/: d.h  sort.h
sort/: CMakeLists.txt  insert.cpp  select.cpp
src/: a.cpp  b.cpp  c.cpp  main.cpp
test1/: CMakeLists.txt  calc.cpp
test2/: CMakeLists.txt  sort.cpp
