cmake_minimum_required(VERSION 3.15)
project(test)
# set(SRC a.cpp b.cpp c.cpp main.cpp)
# aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
# set(EXECUTABLE_OUTPUT_PATH /home/hgc/桌面/Cmake)
# set(CMake_CXX_STANDARD 11)
# add_executable(app ${SRC})
add_library(calc SHARED ${SRC})