cmake_minimum_required(VERSION 3.15)
project(test)
# set(SRC a.cpp b.cpp c.cpp main.cpp)
# aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
# set(EXECUTABLE_OUTPUT_PATH /home/hgc/桌面/Cmak)
# set(CMake_CXX_STANDARD 11)
message("重要消息")
# add_executable(app ${SRC})
# set(LIBRARY_OUTPUT_PATH /home/hgc/桌面/Cmake/calc)
# add_library(calc STATIC ${SRC})
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib2) # 指定自定义库的路径
add_executable(app ${SRC})
message(STATUS "一般消息")
target_link_libraries(app calc)
# message(FATAL_ERROR "重要错误")
message(STATUS "_一般消息")