cmake_minimum_required(VERSION 3.15)
project(test)
add_definitions(-DDEBUG)
# set(SRC a.cpp b.cpp c.cpp main.cpp)
# aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
set(EXECUTABLE_OUTPUT_PATH /home/hgc/桌面/Cmake)
# set(CMake_CXX_STANDARD 11)
# add_executable(app ${SRC})
# set(LIBRARY_OUTPUT_PATH /home/hgc/桌面/Cmake/calc)
# add_library(calc STATIC ${SRC})
# link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib2) # 指定自定义库的路径
add_executable(app ${SRC})
